[gd_scene load_steps=14 format=3 uid="uid://p3hfmus8ecd5"]

[ext_resource type="Script" uid="uid://l0y7yjpbxwym" path="res://scripts/settings.gd" id="1_f4mfi"]
[ext_resource type="Texture2D" uid="uid://blhcqnu3wlsic" path="res://assets/square.png" id="2_f4mfi"]
[ext_resource type="PackedScene" uid="uid://bc1bvtr8jmnpk" path="res://nodes/panel_header.tscn" id="3_gis3k"]
[ext_resource type="PackedScene" uid="uid://d1ncgxs2462p2" path="res://nodes/color_button.tscn" id="4_f4mfi"]
[ext_resource type="Texture2D" uid="uid://c5linjtp3miee" path="res://assets/button.png" id="5_es4n0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gis3k"]
bg_color = Color(0.48179013, 0.4817893, 0.48178947, 1)
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83j8s"]
bg_color = Color(0.48179013, 0.4817893, 0.48178947, 1)
border_width_top = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es4n0"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.15686275, 0.15686275, 0.15686275, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6666667, 0.6666667, 0.6666667, 1)
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gjs24"]
texture = ExtResource("5_es4n0")
modulate_color = Color(0.92156863, 0.92156863, 0.92156863, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_am25x"]
texture = ExtResource("5_es4n0")
modulate_color = Color(1, 0.8352941, 0.63529414, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_es4n0"]
load_path = "res://.godot/imported/button.png-c79155b6e84601a7c5a042250ad77b07.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gis3k"]
texture = SubResource("CompressedTexture2D_es4n0")
modulate_color = Color(0.83033526, 0.83033514, 0.83033514, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjs24"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="Control" type="Control" node_paths=PackedStringArray("top_header", "bottom_header", "line_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4mfi")
top_header = NodePath("Headers/topheader")
bottom_header = NodePath("Headers/Bottomheader")
line_edit = NodePath("Content/CenterContainer/container/LineEdit")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.46229059, 0.46229059, 0.46229059, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f4mfi")
stretch_mode = 1

[node name="Headers" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="topheader" parent="Headers" instance=ExtResource("3_gis3k")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gis3k")
titleText = "Wabble Settings"
titleColor = Color(1, 1, 1, 1)
background_color = Color(0.48179013, 0.4817893, 0.48178947, 1)

[node name="CenterContainer" type="CenterContainer" parent="Headers"]
layout_mode = 2
size_flags_vertical = 3

[node name="Bottomheader" parent="Headers" instance=ExtResource("3_gis3k")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_83j8s")
titleText = ""
is_bottom = true
background_color = Color(0.48179013, 0.4817893, 0.48178947, 1)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="container" type="VBoxContainer" parent="Content/CenterContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Content/CenterContainer/container"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Username"
max_length = 16

[node name="Panel" type="PanelContainer" parent="Content/CenterContainer/container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_es4n0")

[node name="CenterContainer" type="CenterContainer" parent="Content/CenterContainer/container/Panel"]
layout_mode = 2

[node name="HBoxContainer" type="GridContainer" parent="Content/CenterContainer/container/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 16
columns = 4

[node name="ColorButton" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 0
current_color = Color(1, 0.41960785, 0.41960785, 1)

[node name="ColorButton2" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 1
current_color = Color(1, 0.6862745, 0.3019608, 1)

[node name="ColorButton3" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
current_color = Color(0.9843137, 0.5411765, 0.9843137, 1)

[node name="ColorButton4" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 3
current_color = Color(0.6666667, 0.9843137, 0, 1)

[node name="ColorButton5" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 4
current_color = Color(0, 0.63529414, 0.21960784, 1)

[node name="ColorButton6" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 5
current_color = Color(0.1882353, 0.7294118, 0.9529412, 1)

[node name="ColorButton7" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 6
current_color = Color(0, 0.34901962, 0.9529412, 1)

[node name="ColorButton8" parent="Content/CenterContainer/container/Panel/CenterContainer/HBoxContainer" instance=ExtResource("4_f4mfi")]
layout_mode = 2
color_id = 7
current_color = Color(0.38039216, 0.50980395, 0.6039216, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Content/CenterContainer/container"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="Content/CenterContainer/container/HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_focus_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_pressed_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_hover_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_hover_pressed_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_gjs24")
theme_override_styles/pressed = SubResource("StyleBoxTexture_am25x")
theme_override_styles/hover = SubResource("StyleBoxTexture_gis3k")
theme_override_styles/disabled = SubResource("StyleBoxTexture_gjs24")
theme_override_styles/focus = SubResource("StyleBoxFlat_gjs24")
text = "Cancel"

[node name="Confirm" type="Button" parent="Content/CenterContainer/container/HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_focus_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_pressed_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_hover_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_colors/font_hover_pressed_color = Color(0.1943489, 0.19434947, 0.19434908, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_gjs24")
theme_override_styles/pressed = SubResource("StyleBoxTexture_am25x")
theme_override_styles/hover = SubResource("StyleBoxTexture_gis3k")
theme_override_styles/disabled = SubResource("StyleBoxTexture_gjs24")
theme_override_styles/focus = SubResource("StyleBoxFlat_gjs24")
text = "Confirm"

[connection signal="text_changed" from="Content/CenterContainer/container/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Content/CenterContainer/container/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Content/CenterContainer/container/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
